--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,6 @@ body {
 
 .title {
   color: blue;
-  position: absolute;
-  left: 15vw;
-  top: 30vh;
   margin: 0;
   background: white;
   animation-duration: 1.5s;
@@ -24,12 +21,9 @@ body {
 
 .title-2 {
   color: blue;
-  position: absolute;
   opacity: 0;
   height: 70px;
-  left: 15vw;
-  top: 35vh;
-  margin: 20px 0 0 0;
+  margin: 10px 0 10px 0;
   background: white;
   animation-duration: 1.5s;
   animation-timing-function: ease-in-out;
@@ -38,11 +32,10 @@ body {
   animation-name: slideInLeft;
 }
 
-.more-btn {
-  display: flex;
-  justify-content: flex-start;
-  width: 100vw;
-  margin: -10px 0 0 230px;
+.first-page {
+  display: block;
+  position: absolute;
+  left: 200px;
 }
 
 .more {
@@ -53,6 +46,7 @@ body {
   background-color: white;
   border: 4px solid blue;
   opacity: 0;
+  margin: 15px 0 0 0;
   animation-name: fade-bottom;
   animation-duration: 1.5s;
   animation-fill-mode: forwards;
