--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
   --white: #ffffff;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +16,7 @@
 
 body {
   background-color: #0093E9;
-  background-image: linear-gradient(207deg, #0093E9 0%, #c668cc 40%);
+  background-image: linear-gradient(207deg, #0093E9 0%, #c668cc 35%);
 }
 
 .title-name {
@@ -70,7 +74,7 @@ body {
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
   animation-delay: 1.5s;
-  transition: 0.2s;
+  transition: 2.2s;
 }
 
 .btn-more:hover {
