--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,15 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 * {
+  /* border: 2px solid red; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -19,6 +21,75 @@ body {
   background-image: linear-gradient(207deg, #0093E9 0%, #c668cc 35%);
 }
 
+/* Sections */
+section {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+section:nth-child(1) {
+  color: #e0ffff;
+}
+
+section:nth-child(2) {
+  color: #42455a;
+  background: #e0ffff;
+}
+
+section:nth-child(3) {
+  color: #e0ffff;
+}
+
+section:nth-child(4) {
+  color: #42455a;
+  background: #e0ffff;
+}
+
+section .container {
+  margin: 100px;
+}
+
+section h1 {
+  font-size: 3rem;
+  margin: 20px;
+}
+
+section h2 {
+  position: relative;
+  top: 0;
+  font-size: 40px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+section .text-container {
+  display: flex;
+}
+
+section .text-container .text-box {
+  width: 50vw;
+  align-items: center;
+  font-size: 1.5rem;
+  padding: 20px;
+  margin-left: 100px;
+}
+
+section .text-container .text-box p {
+  height: max-content;
+  vertical-align: middle;
+  margin: 20px;
+}
+
+section .text-container .text-box h3 {
+  font-size: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+/* First page */
 .title-name {
   font-size: 4rem;
   background: transparent;
@@ -56,20 +127,21 @@ body {
 .first-page {
   display: block;
   position: absolute;
-  left: 200px;
+  left: 15vw;
   height: 300px;
 }
 
 .btn-more {
+  text-transform: uppercase;
   text-decoration: none;
   border: 1px solid rgb(146, 148, 248);
   position: relative;
   overflow: hidden;
-  display: inline-block;
-  border-radius: 15px;
+  font-weight: bolder;
+  font-size: 1.1rem;
+  border-radius: 10px;
   width: 100px;
   height: 50px;
-  font-size: 1em;
   opacity: 0;
   color: rgb(30, 23, 155);
   margin: 15px 0 0 0;
@@ -81,7 +153,7 @@ body {
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
   animation-delay: 1.5s;
-  transition: 2.2s;
+  transition: 350ms;
 }
 
 .btn-more:hover {
@@ -103,72 +175,202 @@ body {
     rgba(146, 148, 248, 0.4),
     transparent
   );
-  transition: all 650ms;
+  transition: all 350ms;
 }
 
 .btn-more:hover:before {
   left: 100%;
 }
 
-h2 {
-  color: gray
+/* About me page */
+.about-title {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  top: -100px;
 }
 
-section {
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
+.text-container {
   align-items: center;
 }
 
-section:nth-child(1) {
-  color: #e0ffff;
+#about {
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
 }
 
-section:nth-child(2) {
-  color: #42455a;
-  background: #e0ffff;
+h2 {
+  color: rgb(26, 67, 124);
 }
 
-section:nth-child(3) {
-  color: #e0ffff;
+.prof-pic {
+  max-width: 250px;
+  max-height: auto;
+  border-radius: 50%;
 }
 
-section:nth-child(4) {
-  color: #42455a;
-  background: #e0ffff;
-}
-
-section .container {
-  margin: 100px;
-}
-
-section h1 {
-  font-size: 3rem;
-  margin: 20px;
-}
-
-section h2 {
-  font-size: 40px;
-  text-align: center;
+.resume-btn,
+.see-live,
+.source-code
+ {
   text-transform: uppercase;
+  text-decoration: none;
+  border: 5px solid rgb(146, 148, 248);
+  position: absolute;
+  left: 40%;
+  top: 100%;
+  overflow: hidden;
+  font-weight: bolder;
+  font-size: 1.1rem;
+  border-radius: 10px;
+  width: 150px;
+  height: 50px;
+  opacity: 0;
+  color: rgb(33, 25, 190);
+  margin: 0;
+  border: none;
+  box-shadow: rgba(14, 72, 144, 0.35) 0px 1px 2px;
+  transition: all 150ms ease-in-out;
+  animation-name: fade-bottom;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+  animation-delay: 1s;
+  transition: 550ms;
+
 }
 
-section .text-container {
+.resume-btn:hover, 
+.see-live:hover,
+.source-code:hover
+{
+  cursor: pointer;
+  box-shadow: 1px 1px 20px 10px rgba(44, 47, 199, 0.4);
+}
+
+.resume-btn:before,
+.see-live:before,
+.source-code:before 
+ {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    transparent,
+    rgba(146, 148, 248, 0.4),
+    transparent
+  );
+  transition: all 350ms;
+}
+
+.resume-btn:hover:before, 
+.see-live:hover:before,
+.source-code:hover:before 
+  {
+    left: 100%;
+  }
+
+/* Projects */
+#projects {
+  height: 100vh;
+}
+
+.projects-title {
+  position: absolute;
+  left: 40%;
+  top: -400px;
+  color: white;
+}
+
+.projects-container {
+  display: flex;
+  flex-direction: column;
+  width: 80vw;
+}
+
+.project-1 {
   display: flex;
 }
 
-section .text-container .text-box {
-  margin: 20px;
-  padding: 20px;
-  background: #00c2cb;
+.project1-desc {
+  position: absolute;
+  left: -10vw;
+  top: -200px;
+  max-width: 40vw;
+  height: 25vw;
 }
 
-section .text-container .text-box h3 {
-  font-size: 30px;
-  text-align: center;
-  text-transform: uppercase;
-  margin-bottom: 10px;
+.see-live {
+  left: 8vw;
+  top: 300px;
+}
+
+.source-code {
+  left: 20vw;
+  top: 300px;
+}
+
+.project1-img {
+  position: absolute;
+  left: 50vw;
+  top: -200px;
+  max-width: 50vw;
+  overflow: hidden;
+}
+
+.proj-img {
+  width: 25vw;
+  height: auto;
+}
+
+/* Project 2 */
+.project2 {
+  position: absolute;
+  top: 300px;
+}
+
+/* Project 3 */
+.project3 {
+  position: absolute;
+  top: 600px;
+}
+
+/* Contact */
+#contact {
+  background-color: #c668cc;
+}
+
+@media (max-width: 680px) {
+  .first-page {
+    
+  }
+}
+
+@media (max-width: 895px) {
+  section .text-container .text-box {
+    margin: 0;
+    width: 80vw;
+  }
+
+  .about-title {
+    top: -200px;
+  }
+
+  #about {
+    height: 180vh;
+  }
+
+  .btn-more {
+    position: absolute;
+    left: 40%;
+  }
+
+  .first-page {
+    left: 5vw;
+  }
 }
 
 @media (max-width: 900px) {
