--- a/styles.css
+++ b/styles.css
@@ -556,12 +556,19 @@ h3 p {
 
 /* Contact */
 #contact {
-  /* position: absolute; */
-  top: 3700px;
+  position: relative;
+  flex-direction: column;
+  top: 110vh;
   background-color: #e0ffff;
   min-height: 100px;
   height: 800px;
   width: 100%;
+}
+
+.contact-container {
+  margin-top: 70px;
+  height:300px;
+  max-height: 300px;
 }
 
 .contact-title {
@@ -572,14 +579,14 @@ top: -190px
 
 .contact-p {
   height: 100px;
-  font-size:xx-large;
+  font-size:3vw;
   color: black;
-  margin-top: -80px;
+  margin-top: 80px;
 }
 
-.contact-btn {
-  left: 33%;
-  top: 60px;
+.contact-button {
+  display: flex;
+  justify-content: center;
 }
 
 .social-links {
@@ -587,8 +594,9 @@ top: -190px
   display: flex;
   justify-content: space-evenly;
   width: 300px;
-  left: 38%;
-  top: 600px;
+  margin-top: 80px;
+  /* left: 38%; */
+  /* top: 900px; */
   gap: 20px;
 }
 
@@ -680,6 +688,12 @@ top: -190px
   
   .project-p {
     font-size: 1.2rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .contact-p {
+    font-size:xx-large;
   }
 }
 
